# giga-harness

./: .gitignore  ARCHITECTURE.md  BROADCAST_FANOUT_DESIGN.md  CLAUDE_OPERATOR.md  COMMAND_REFERENCE.md  Cargo.toml  MANUAL_SETUP.md  QUICKSTART.md  README.md  REMOTE_DESIGN.md  REMOTE_QUICKSTART.md  STALE_WAITS_NO_LLM_DESIGN.md  TELEPORT_DESIGN.md  TRANSPORT_DESIGN.md  install.ps1  install.sh  setup-remote-peer.sh
.claude/skills/: README.md
.github/: README.md
.github/workflows/: ci.yml  release.yml
design/: README.md  REMOTE_DUAL_WRITE_DESIGN.md  SWARM_BOSS_DESIGN.md
docs/: COMMAND_REFERENCE.md  MANUAL_SETUP.md  QUICKSTART.md  README.md  REMOTE_QUICKSTART.md
examples/: README.md
examples/minimal/: giga-harness.toml
src/: README.md  add_agent.rs  add_channel.rs  add_host.rs  claude_operator.rs  cli.rs  codex_channel.rs  config.rs  cursor.rs  dispatch.rs  fs_paths.rs  hosts.rs  init.rs  launch.rs  main.rs  merger.rs  post.rs  registry.rs  remote.rs  runtime.rs  set_swarm_boss.rs  setup.rs  setup_remote_node.rs  stale_wait.rs  sweep.rs  switch.rs  sync.rs  takeover.rs  teleport.rs  templates.rs  terminal.rs  transport.rs  trust.rs  upgrade.rs  validate.rs  watch.rs
src/accounts/: README.md  mod.rs  switch.rs
src/config/: README.md  broadcast.rs  edit.rs  load.rs  mod.rs  resolve.rs  schema.rs  validate.rs
src/coordination/: README.md  codex_channel.rs  merger.rs  mod.rs  post.rs  sweep.rs
src/foundation/: README.md  append.rs  atomic_io.rs  dirs.rs  frame.rs  mod.rs  paths.rs  proc.rs  self_invoke.rs  slices.rs  ssh.rs  tail.rs  tailscale.rs  timefmt.rs
src/mobility/: README.md  mod.rs  takeover.rs  teleport.rs
src/mutate/: README.md  add_agent.rs  add_channel.rs  add_host.rs  mod.rs  peer_bootstrap.rs  set_swarm_boss.rs
src/runtime/: README.md  agy.rs  claude.rs  codex.rs  mod.rs
src/scaffold/: README.md  init.rs  launch.rs  mod.rs  render.rs  templates.rs
src/transport/: README.md  git.rs  hosts.rs  local.rs  mod.rs  remote.rs  rsync_tailscale.rs  setup_remote_node.rs
src/transports/: README.md  git.rs  local.rs  mod.rs  rsync_tailscale.rs
src/ui/: README.md  api.rs  channel.rs  mod.rs  pid.rs  process.rs  server.rs  state.rs  ws.rs
templates/: CLAUDE_OPERATOR.md  README.md  agent.md
tests/: README.md  cross_host_chaos.rs  cross_host_e2e.rs  git_transport_e2e.rs  swarm_chaos.rs
(+32 files in other folders)
